Moved Vault integration into its own plugin to fix issues